style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --ff-main: "DM Sans", sans-serif;

  --neutral-0: #ffffff;
  --neutral-100: #f2f2f7;
  --neutral-200: #e4e4ef;
  --neutral-600: #404254;
  --neutral-700: #2a2b37;
  --neutral-800: #21222c;
  --neutral-900: #12131a;

  --purple-400: #d3a0fa;
  --yellow-500: #ff9f00;
  --orange-500: #fe8159;

  --spacing-100: 8px;
  --spacing-200: 16px;
  --spacing-300: 24px;
  --spacing-400: 32px;
  --spacing-500: 40px;
}

body {
  background-color: var(--neutral-900);
  font-family: var(--ff-main);
  color: var(--neutral-0);
  min-height: 100vh;
  padding: var(--spacing-400);
}

.container {
  max-width: 950px;
  margin: 0 auto;
  margin-top: var(--spacing-1000);
  padding: 0 var(--spacing-200);
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--spacing-400);
}

.header-toggle {
  background-color: var(--neutral-800);
  border: none;
  cursor: pointer;
  padding: var(--spacing-100);
  border-radius: 8px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  transition: opacity 0.2s ease;
}

.header-toggle:hover {
  opacity: 0.8;
}

.title {
  font-family: var(--ff-headings);
  font-size: 3rem;
  text-align: center;
  margin-bottom: var(--spacing-300);
  line-height: 1.2;
}

.title-highlight {
  display: block;
}

.counter {
  width: 100%;
  margin-bottom: var(--spacing-300);
}

.counter-input {
  width: 100%;
  min-height: 200px;
  background-color: var(--neutral-800);
  color: var(--neutral-0);
  padding: var(--spacing-200);
  border-radius: 12px;
  border: 1px solid var(--neutral-600);
  font-family: var(--ff-main);
  font-size: 1.25rem;
  outline: none;
  resize: vertical;
  transition: border-color 0.3s ease, box-shadow 0.3s ease;
}

.counter-input:hover,
.counter-input:focus {
  border-color: var(--purple-400);
  box-shadow: 0 0 12px 0 var(--purple-400);
}

.counter-input.limit-reached {
  border-color: var(--orange-500);
  box-shadow: 0 0 12px 0 var(--orange-500);
}

.limit-error-msg {
  display: none;
  align-items: center;
  gap: var(--spacing-100);
  color: var(--orange-500);
  font-size: 0.875rem;
  margin-top: var(--spacing-100);
}

.limit-error-msg.show {
  display: flex;
}

.header-logo-2 {
  display: block;
}

.counter-controls {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: var(--spacing-200);
}

.checkbox-group {
  display: flex;
  align-items: center;
  gap: var(--spacing-300);
  background-color: var(--neutral-900);
}

.char-limit-input {
  width: 60px;
  padding: 4px;
  border: 1px solid var(--neutral-600);
  border-radius: 4px;
  background-color: transparent;
  color: var(--neutral-0);
  font-family: inherit;
  font-size: 1rem;
  outline: none;
  display: none;
}

.char-limit-input.show {
  display: inline-block;
}

.checkbox {
  display: flex;
  align-items: center;
  gap: var(--spacing-100);
  cursor: pointer;
  font-size: 1rem;
}

.checkbox-input {
  appearance: none;
  -webkit-appearance: none;
  width: 18px;
  height: 18px;
  border: 1px solid var(--neutral-0);
  border-radius: 4px;
  background-color: transparent;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}


.checkbox-input:checked {
  background-color: var(--purple-400);
  border-color: var(--purple-400);
  background-image: url('./assets/images/icon-check.svg');
  background-repeat: no-repeat;
  background-position: center;
}

.stats-container {
  display: flex;
  gap: var(--spacing-300);
  margin-top: var(--spacing-500);
  width: 100%;
}

.stat-card {
  flex: 1;
  height: 150px;
  align-items: flex-start;
  padding: 16px 32px 48px 32px;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  position: relative;
  gap: var(--spacing-200);
}

.stat-card-purple {
  background-color: var(--purple-400);
  color: var(--neutral-900);
  background-image: url('./assets/images/pattern-character-count.svg');
  background-repeat: no-repeat;
  background-size: 150px;
  background-position: 120% 80%;
}

.stat-card-yellow {
  background-color: var(--yellow-500);
  color: var(--neutral-900);
  background-image: url('./assets/images/pattern-word-count.svg');
  background-repeat: no-repeat;
  background-size: 150px;
  background-position: 120% 80%;
}

.stat-card-orange {
  background-color: var(--orange-500);
  color: var(--neutral-900);
  background-image: url('./assets/images/pattern-sentence-count.svg');
  background-repeat: no-repeat;
  background-size: 150px;
  background-position: 120% 80%;
}

.stat-number {
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 1;
  margin-top: var(--spacing-400);
  max-width: 50%;
}

.stat-label {
  font-size: 1rem;
  font-weight: 400;
  max-width: 60%;
  margin-bottom: 8px;
}

.letter-density {
  margin-top: var(--spacing-500);
}

.letter-density-title {
  font-size: 1.5rem;
  margin-bottom: var(--spacing-300);
}

.density-row {
  display: flex;
  align-items: center;
  gap: var(--spacing-200);
  margin-bottom: var(--spacing-200);
}

.letter {
  width: 20px;
}

.bar-container {
  flex-grow: 1;
  height: 12px;
  background-color: var(--neutral-800);
  border-radius: 999px;
}

.bar-fill {
  height: 100%;
  background-color: var(--purple-400);
  border-radius: 999px;
}

.percentage {
  font-size: 0.875rem;
  color: var(--neutral-200);
  width: 100px;
  text-align: right;
}

.see-more-btn {
  background: transparent;
  border: none;
  color: var(--neutral-0);
  font-family: inherit;
  font-size: 1.125rem;
  display: flex;
  align-items: center;
  gap: var(--spacing-100);
  cursor: pointer;
  padding: 0;
  margin-top: var(--spacing-300);
}

.see-more-btn:hover {
  opacity: 0.8;
}

@media (max-width: 768px) {
  .title {
    font-size: 2.5rem;
  }

  .checkbox-group {
    gap: var(--spacing-200);
  }

  .checkbox {
    font-size: 0.875rem;
  }

  .reading-time {
    font-size: 0.875rem;
  }

  .stats-container {
    gap: var(--spacing-200);
  }

  .stat-card {
    height: auto;
    min-height: 130px;
    padding: var(--spacing-200);
    gap: 0;
  }

  .stat-number {
    font-size: 2.25rem;
    margin-top: 0;
  }

  .stat-label {
    margin-bottom: 0;
  }

  .stat-card.stat-card-purple {
    background-position: 170% 60% !important;
    background-size: 130px
  }

  .stat-card.stat-card-yellow {
    background-position: 170% 60% !important;
    background-size: 130px
  }

  .stat-card.stat-card-orange {
    background-position: 170% 60% !important;
    background-size: 130px
  }

  .stat-number {
    font-size: 2.5rem;
    font-weight: 700;
    line-height: 1;
    margin-top: var(--spacing-400);
    max-width: 50%;
  }

  .stat-label {
    font-size: 0.91rem;
    font-weight: 400;
    max-width: 60%;
  }
}

@media (max-width: 500px) {
  body {
    padding: var(--spacing-200);
  }

  .container {
    margin-top: var(--spacing-100);
  }

  .title {
    font-size: 2rem;
  }

  .counter-input {
    font-size: 1rem;
    min-height: 150px;
  }

  .counter-controls {
    flex-direction: column;
    align-items: flex-start;
    gap: var(--spacing-200);
  }

  .checkbox-group {
    flex-direction: column;
    gap: var(--spacing-100);
  }

  .checkbox {
    font-size: 0.875rem;
  }

  .stats-container {
    flex-direction: column;
    gap: var(--spacing-200);
  }

  .stat-card.stat-card-purple,
  .stat-card.stat-card-yellow,
  .stat-card.stat-card-orange {
    background-position: 127% 80% !important;
  }
}

body.light-theme {
  background-color: var(--neutral-100);
  color: var(--neutral-900);
}

body.light-theme .header-toggle {
  background-color: var(--neutral-0);
}

body.light-theme .counter-input {
  background-color: var(--neutral-0);
  border-color: var(--neutral-200);
  color: var(--neutral-900);
}

body.light-theme .checkbox-group {
  background-color: transparent;
}

body.light-theme .checkbox-input {
  border-color: var(--neutral-600);
}

body.light-theme .char-limit-input {
  border-color: var(--neutral-600);
  color: var(--neutral-900);
}

body.light-theme .bar-container {
  background-color: var(--neutral-200);
}

body.light-theme .percentage {
  color: var(--neutral-600);
}

body.light-theme .see-more-btn {
  color: var(--neutral-900);
}

